--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -2,7 +2,6 @@
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
-    color: black;
     display: grid;
     grid-template-columns: minmax(250px, 1fr);
     grid-gap: 10px;
@@ -25,15 +24,16 @@
 .current_city {
     margin: 5px;
     font-size: 15px;
-    font-weight: 400;
+    font-weight: bold;
     text-align: center;
     text-decoration: none;
 }
 
 .current_temp {
-    font-size: 30px;
     position: relative;
     top: -50px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .current_detail {
@@ -41,6 +41,7 @@
     padding: 0;
     margin: 0;
     display: grid;
+    grid-gap: 10px;
 }
 
 .current_detail li {
