--- a/src/components/Weather.module.css
+++ b/src/components/Weather.module.css
@@ -51,3 +51,17 @@
     font-weight: bold;
     color: gray;
 }
+
+.current_link {
+    position: relative;
+    top: -5px;
+    left: -10px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: right;
+}
+
+.current_link a {
+    text-decoration: none;
+    color: blueviolet;
+}
